Added 2 more entities

--- a/PetzeyPetEntities/PetzeyPetEntities.csproj
+++ b/PetzeyPetEntities/PetzeyPetEntities.csproj
@@ -52,7 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Allergy.cs" />
+    <Compile Include="OwnerHasPet.cs" />
     <Compile Include="Pet.cs" />
+    <Compile Include="PetAndAppointments.cs" />
     <Compile Include="PetOwner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
