--- a/PetzeyPetDataAccessLayer/PetzeyPetDataAccessLayer.csproj
+++ b/PetzeyPetDataAccessLayer/PetzeyPetDataAccessLayer.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PetOwnerRepository\IPetOwnerRepository.cs" />
     <Compile Include="PetOwnerRepository\PetOwnerRepository.cs" />
     <Compile Include="PetRepository\IPetDbRepository.cs" />
