--- a/PetzeyPetApi/packages.config
+++ b/PetzeyPetApi/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
+  <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="bootstrap" version="3.4.1" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
@@ -15,7 +17,9 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.5.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols.WsFederation" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens.Saml" version="5.5.0" targetFramework="net48" />
@@ -24,8 +28,10 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.ActiveDirectory" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.Jwt" version="4.2.2" targetFramework="net48" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.2.2" targetFramework="net48" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.0.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
