--- a/PetzeyPetEntities/packages.config
+++ b/PetzeyPetEntities/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Authorization" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.0.0" targetFramework="net48" />
@@ -27,7 +28,7 @@
   <package id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="1.0.0" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="Swagger" version="1.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.0.0" targetFramework="net48" />
   <package id="System.Collections" version="4.0.11" targetFramework="net48" />
