--- a/PetzeyPetApi/Web.config
+++ b/PetzeyPetApi/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+	<connectionStrings>
+		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PetDb2;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
   <appSettings>
   </appSettings>
   <system.web>
