--- a/PetzeyPetApi/Web.config
+++ b/PetzeyPetApi/Web.config
@@ -8,6 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+	<connectionStrings>
+		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PetDb2;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="ida:ClientId" value="47faceb0-8b4a-4664-acc2-171f3adc5607" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
