--- a/PetzeyPetApi/Web.config
+++ b/PetzeyPetApi/Web.config
@@ -1,9 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    </configSections>
+	<connectionStrings>
+		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PetDb2;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+	</connectionStrings>
   <appSettings>
     <add key="ida:ClientId" value="b6973a3c-ec31-460b-95a1-98c4414847fb" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
