--- a/PetzeyPetApi/PetzeyPetApi.csproj
+++ b/PetzeyPetApi/PetzeyPetApi.csproj
@@ -328,6 +328,7 @@
     <ProjectReference Include="..\PetzeyPetDTOs\PetzeyPetDTOs.csproj">
       <Project>{5A97DAB9-CC7A-49DE-A8C7-C3FDB4F6D992}</Project>
       <Name>PetzeyPetDTOs</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PetzeyPetDataAccessLayer\PetzeyPetDataAccessLayer.csproj">
       <Project>{edcbc7b8-82cf-4330-a954-cb3b56d7960b}</Project>
       <Name>PetzeyPetDataAccessLayer</Name>
