--- a/PetzeyPetApi/packages.config
+++ b/PetzeyPetApi/packages.config
@@ -36,6 +36,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
+  <package id="Swashbuckle" version="5.2.1" targetFramework="net48" />
+  <package id="Swashbuckle.Core" version="5.2.1" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
