--- a/PetzeyPetApi/Web.config
+++ b/PetzeyPetApi/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -8,11 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PetDb2;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PetDb2;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
-    <add key="ida:ClientId" value="47faceb0-8b4a-4664-acc2-171f3adc5607" />
+    <add key="ida:ClientId" value="b6973a3c-ec31-460b-95a1-98c4414847fb" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/" />
     <add key="ida:Domain" value="pratian.com" />
     <add key="ida:TenantId" value="f05cf28c-208e-4f41-bb7d-64141a37a2f9" />
