--- a/PetzeyPetApi/packages.config
+++ b/PetzeyPetApi/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
+  <package id="log4net" version="2.0.13" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
@@ -15,6 +16,15 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Log4Net.AspNetCore" version="6.1.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net48" />
@@ -38,7 +48,11 @@
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="Swashbuckle" version="5.2.1" targetFramework="net48" />
   <package id="Swashbuckle.Core" version="5.2.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
   <package id="Unity.Abstractions" version="5.11.6" targetFramework="net48" />
