--- a/PetzeyPetApi/packages.config
+++ b/PetzeyPetApi/packages.config
@@ -12,9 +12,12 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net48" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net48" />
@@ -37,5 +40,6 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net48" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
