--- a/PetzeyPetUnitTests/packages.config
+++ b/PetzeyPetUnitTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="log4net" version="2.0.15" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="2.2.7" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="2.2.7" targetFramework="net48" />
 </packages>
