--- a/PetzeyPetBusinessLayer/packages.config
+++ b/PetzeyPetBusinessLayer/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="log4net" version="2.0.15" targetFramework="net48" />
 </packages>
