--- a/PetzeyPetEntities/packages.config
+++ b/PetzeyPetEntities/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="log4net" version="2.0.15" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Authorization" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.0.0" targetFramework="net48" />
