Added dependency injection to the api layer

--- a/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
+++ b/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
@@ -59,6 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPetBll.cs" />
+    <Compile Include="IPetOwnerBll.cs" />
     <Compile Include="PetBll.cs" />
     <Compile Include="PetOwnerBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
