Exceptions Handeled and errors logged

--- a/PetzeyPetApi/Web.config
+++ b/PetzeyPetApi/Web.config
@@ -11,7 +11,7 @@
   </configSections>
   <log4net debug="true">
     <root>
-      <level value="WARN" />
+      <level value="ERROR" />
       <appender-ref ref="File" />
       <level value="DEBUG" />
       <appender-ref ref="File" />
