--- a/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
+++ b/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
@@ -61,9 +61,11 @@
   <ItemGroup>
     <Compile Include="IPetBll.cs" />
     <Compile Include="IPetOwnerBll.cs" />
+    <Compile Include="IRegexFactory.cs" />
     <Compile Include="PetBll.cs" />
     <Compile Include="PetOwnerBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegexFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
