Added Some Exceptions in PetOwner Controller

--- a/PetzeyPetApi/packages.config
+++ b/PetzeyPetApi/packages.config
@@ -25,6 +25,7 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Log4Net.AspNetCore" version="6.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net48" />
