--- a/PetzeyPetEntities/packages.config
+++ b/PetzeyPetEntities/packages.config
@@ -19,19 +19,23 @@
   <package id="Microsoft.AspNetCore.WebUtilities" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net48" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyModel" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.FileProviders.Abstractions" version="1.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Log4Net.AspNetCore" version="6.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.ObjectPool" version="1.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options" version="1.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="1.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="Swagger" version="1.0.0" targetFramework="net48" />
-  <package id="System.Buffers" version="4.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
   <package id="System.Collections" version="4.0.11" targetFramework="net48" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net48" />
   <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net48" />
@@ -46,10 +50,13 @@
   <package id="System.IO" version="4.1.0" targetFramework="net48" />
   <package id="System.Linq" version="4.1.0" targetFramework="net48" />
   <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net48" />
   <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net48" />
   <package id="System.Runtime" version="4.1.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net48" />
   <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net48" />
