--- a/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
+++ b/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
@@ -74,6 +74,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AllergyBll.cs" />
+    <Compile Include="IAllergyBll.cs" />
     <Compile Include="IPetBll.cs" />
     <Compile Include="IPetOwnerBll.cs" />
     <Compile Include="PetBll.cs" />
